--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -36,7 +36,7 @@ body {
   width: 80px;
   height: auto;
   margin-bottom: 20px;
-  filter: brightness(0) invert(1);
+  /* filter: brightness(0) invert(1); */
 }
 
 h2 {
